--- a/ReactAPITEST/frontend/src/styles.css
+++ b/ReactAPITEST/frontend/src/styles.css
@@ -7,8 +7,8 @@ body {
 }
 
 .nav {
-    background-color: #333;
-    color: white;
+    background-color: #ffffff;
+    color: #333;
     display: flex;
     justify-content: space-between;
     align-items: stretch;
@@ -18,8 +18,8 @@ body {
 
 .site-title {
     font-size: 3rem;
+    color: #333;
 }
-
 .nav ul {
     padding: 0;
     margin: 0;
@@ -28,7 +28,9 @@ body {
     gap: 1rem;
 }
 
-
+.select-styling{
+    align-content: center;
+}
 .nav a{
     color: inherit;
     text-decoration: none;
@@ -46,6 +48,74 @@ body {
     background-color: #777;
 }
 
+.nav select{
+    text-decoration: none;
+    height: 40%;
+    align-items: center;
+    padding: .25rem;
+    align-self: center;
+}
+
 .listingList li{
     list-style: none;
+}
+
+.users select{
+    margin: 2px;
+    align-self: center;
+}
+
+/*} Catalog Styling
+
+{*/
+
+
+.catalogContainer {
+    min-height: 100vh;
+    background: url("../public/Images/projectBackground.jpg") no-repeat center center fixed; /* Use a background image */
+    background-size: cover;
+    margin: 0;
+    padding: 0;
+  }
+
+
+
+  
+.mb-3{
+    border-style: solid;
+    border-color: rgb(240, 240, 240);
+    border-radius: 25px;
+    margin: 1rem;
+    box-shadow: 0 4px 8px rgb(140, 140, 140);
+    flex: 1 0 18rem;
+    max-width: 18rem;
+    background-color: rgb(255, 255, 255);
+}
+
+.cardImg {
+    object-fit: cover;
+  height: 100%;
+  width: 100%;
+  border-radius: 25px 25px 0 0;
+}
+
+
+.cardContainer{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 1rem;
+    gap: 2rem;
+    margin-left: 5rem;
+}
+
+.cardTitle{
+    padding-left: 1rem;
+}
+
+.cardDescription{
+    padding-left: 1rem;
+}
+
+.listingLink{
+    padding-left: 1rem;
 }
