--- a/ReactAPITEST/frontend/src/styles.css
+++ b/ReactAPITEST/frontend/src/styles.css
@@ -20,6 +20,7 @@ body {
     font-size: 3rem;
     color: #333;
 }
+
 .nav ul {
     padding: 0;
     margin: 0;
@@ -31,6 +32,8 @@ body {
 .select-styling{
     align-content: center;
 }
+
+
 .nav a{
     color: inherit;
     text-decoration: none;
@@ -118,4 +121,21 @@ body {
 
 .listingLink{
     padding-left: 1rem;
+}
+
+.listing-img {
+  height: 100%;
+  width: 100%;
+  border-radius: 25px 25px 25px 25px;
+  box-shadow: 0 4px 8px rgb(140, 140, 140);
+}
+
+.card-listing {
+    margin-left: 1rem;
+    max-width: 25rem;
+}
+
+.card-title {
+    font-size: large;
+    font-weight: bold;
 }
