--- a/ReactAPITEST/frontend/src/styles.css
+++ b/ReactAPITEST/frontend/src/styles.css
@@ -119,6 +119,11 @@ body {
     padding-left: 1rem;
 }
 
+.cardPrice{
+    padding-left: 1rem;
+    font-weight: bold;
+}
+
 .listingLink{
     padding-left: 1rem;
 }
